[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/BattleScene/BattleSceneForest.png" type="Texture" id=1]
[ext_resource path="res://BattlePhase/Interface/Interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://BattlePhase/AttackHandler.gd" type="Script" id=3]
[ext_resource path="res://BattlePhase/Enemy.gd" type="Script" id=4]
[ext_resource path="res://BattlePhase/Friendly.gd" type="Script" id=5]
[ext_resource path="res://BattlePhase/EnemyAttackPicker.gd" type="Script" id=6]
[ext_resource path="res://DialogueBox/DialogueBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://BattlePhase/DialogueHandler.gd" type="Script" id=8]
[ext_resource path="res://BattlePhase/SceneHandler.gd" type="Script" id=9]
[ext_resource path="res://BattlePhase/GeneralHandler.gd" type="Script" id=10]

[node name="BattlePhase" type="Node2D"]

[node name="GeneralHandler" type="Node" parent="."]
script = ExtResource( 10 )

[node name="AttackHandler" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DialogueHandler" type="Node" parent="."]
script = ExtResource( 8 )
dialogue_file_path = "res://Dialogue/battlephase_dialogue.json"

[node name="SceneHandler" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 1.6, 1.5 )
texture = ExtResource( 1 )

[node name="Friendly" type="Node2D" parent="."]
position = Vector2( 131.18, 186.679 )
script = ExtResource( 5 )

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( 850.846, 183.74 )
script = ExtResource( 4 )

[node name="EnemyAttackPicker" type="Node" parent="Enemy"]
script = ExtResource( 6 )

[node name="Interface" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 130.199
margin_top = 84.9517
margin_right = 310.199
margin_bottom = 162.952
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="DialogueBox" parent="." instance=ExtResource( 7 )]
margin_left = 280.0
margin_top = 496.0
margin_right = 1008.0
margin_bottom = 720.0
